log
Thu Mar 19 06:54:48 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
ebf349b
Thu Mar 19 07:20:50 PM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       contador+= dato;
      |               ^~
26ee3eb
Thu Mar 19 07:21:27 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   64 |    return contador;
      |           ^~~~~~~~
fd19e0d
Thu Mar 19 07:21:53 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:15: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   57 |    while(dato != NULL){
      |               ^
exercises.c:55:9: note: ‘dato’ was declared here
   55 |    int *dato;
      |         ^~~~
cc1: all warnings being treated as errors
5404995
Thu Mar 19 07:24:18 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:15: error: comparison between pointer and integer [-Werror]
   57 |    while(dato != NULL){
      |               ^~
exercises.c:58:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       dato = first(L);
      |            ^
exercises.c:59:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   59 |       contador+= *dato;
      |                  ^~~~~
exercises.c:61:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |       dato = next(L);
      |            ^
cc1: all warnings being treated as errors
056f455
Thu Mar 19 07:24:56 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:15: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   57 |    while(dato != NULL){
      |               ^
exercises.c:55:9: note: ‘dato’ was declared here
   55 |    int *dato;
      |         ^~~~
cc1: all warnings being treated as errors
937a520
Thu Mar 19 07:27:22 PM UTC 2026: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
afabe62
Thu Mar 19 07:35:21 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:15: error: comparison between pointer and integer [-Werror]
   80 |       if(dato == elem){
      |               ^~
cc1: all warnings being treated as errors
b2aa1fa
Thu Mar 19 07:35:56 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   80 |       if(dato == *elem){
      |                  ^~~~~
b79a1c0
Thu Mar 19 07:36:18 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = first(L);
      |         ^
499558d
Thu Mar 19 07:38:11 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:15: error: comparison between pointer and integer [-Werror]
   80 |       if(dato == elem){
      |               ^~
cc1: all warnings being treated as errors
9382d48
Thu Mar 19 07:40:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:15: error: comparison between pointer and integer [-Werror]
   80 |       if(dato == elem){
      |               ^~
cc1: all warnings being treated as errors
a4aee6c
Thu Mar 19 07:40:50 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int*)first(L);
      |         ^
4a4adbd
Thu Mar 19 07:41:17 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
f8b05f9
Thu Mar 19 07:42:53 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:4: error: invalid type argument of unary ‘*’ (have ‘int’)
   78 |    *dato = (int *)first(L);
      |    ^~~~~
eb37154
Thu Mar 19 07:45:22 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
exercises.c:82:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   82 |          dato = (int *)next(L);
      |               ^
88c5bc6
Thu Mar 19 07:45:52 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
exercises.c:82:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   82 |          dato = next(L);
      |               ^
397cef3
Thu Mar 19 07:46:18 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
exercises.c:82:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   82 |          dato = (int *)next(L);
      |               ^
7575052
Thu Mar 19 07:47:09 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
exercises.c:79:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   79 |    while(first(L)!=NULL)
      |    ^~~~~
exercises.c:83:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   83 |       dato = (int *)next(L);
      |       ^~~~
exercises.c:83:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   83 |       dato = (int *)next(L);
      |            ^
cc1: all warnings being treated as errors
81e702a
Thu Mar 19 07:50:00 PM UTC 2026: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  1|4
total_score: 10/70
b295338
Thu Mar 19 07:53:21 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    dato = (int *)first(L);
      |         ^
exercises.c:79:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   79 |    while(first(L)!=NULL)
      |    ^~~~~
exercises.c:83:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   83 |       dato = (int *)next(L);
      |       ^~~~
exercises.c:83:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   83 |       dato = (int *)next(L);
      |            ^
cc1: all warnings being treated as errors
91d78bd
